# agent-classifier

./: README.md  __init__.py  __main__.py  main.py  models.py  pyproject.toml  start.sh
classifiers/: auth_abuse_detector.py  base.py  brute_force_detector.py  engine.py  recon_detector.py  sqli_detector.py
config/: __init__.py  settings.py
docs/superpowers/plans/: 2026-06-09-db-verdict-storage.md  2026-06-09-traffic-fraud-classifier.md
docs/superpowers/specs/: 2026-06-09-db-verdict-storage-design.md  2026-06-09-traffic-fraud-classifier-design.md
ingestion/: file_ingestor.py  ip_reputation.py  parser.py
output/: db_writer.py  writer.py
profiler/: endpoint_profile.py  ip_profile.py  profiler.py  user_profile.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/properties/: test_auth_abuse.py  test_brute_force.py  test_config.py  test_parsing.py  test_profiling.py  test_recon.py  test_sqli.py  test_user_profiling.py  test_verdict.py
tests/unit/: test_config.py  test_db_writer.py  test_models.py
