[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-classifier"
version = "0.1.0"
description = "Traffic fraud classifier for CloudWatch log analysis"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "moto[logs]>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ingestion*", "profiler*", "classifiers*", "output*", "config*"]
